[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/exploration/ui/card_shop_panel.gd" id="1"]

[node name="CardShopPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.75)

[node name="FlashOverlay" type="ColorRect" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 40.0
offset_top = 30.0
offset_right = -40.0
offset_bottom = -30.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Shop"

[node name="CurrencyLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Gold: 0"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 320)

[node name="CardGrid" type="GridContainer" parent="PanelContainer/MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 4

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "Close"
